@@ -1,7 +1,6 @@
 /**	-*-mode: Fundamental; tab-width: 8; -*-
  **
  **	Server.h - Server functions.
- **	NOTE:	This is for inclusion by both client and server.
  **
  **	Written: 5/3/2001 - JSF
  **/
@@ -31,25 +30,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  */
 #ifdef XWIN
 
-/*
- *	An entry sent between client and server will have the following format:
- *
-Bytes	Description
-0	Magic.
-1-2	Length of the data, low-byte first.
-3	Message type.  Defined below.
-4-	Data.
- */
-
-namespace Exult_server
-{
-const unsigned char magic = 0xf3;
-const int maxlength = 256;
-enum Msg_type
-	{
-	say = 0				// For testing.  Data is text.
-	};
-}
+extern int client_socket;
+extern void Server_init();
+extern void Server_delay();
 
 #endif	/* XWIN */
 
